# inova-crm-ai

./: .coderabbit.yaml  .env.example  .gitignore  .prettierignore  DEPLOY-HETZNER.md  INFORMAÇÕES.txt  Plano_Mestre_Inova_CRM_AI.md  README.md  eslint.config.js  lefthook.yml  package-lock.json  package.json
.specify/: init-options.json  integration.json
ai-services/: Dockerfile  README.md  pyproject.toml  requirements.txt
ai-services/app/: __init__.py  guardrails.py  main.py
ai-services/app/agents/: followup.py  qualifier.py  sla_alerts.py  summarizer.py
ai-services/app/rag/: in_memory.py
ai-services/tests/: test_health.py  test_qualify.py
backend/: .env.example  Dockerfile  jest.config.js  package.json  tsconfig.json
chatwoot/: .env.example  README.md  docker-compose.evolution.yml  docker-compose.vps.yml  docker-compose.yml  evolution.env.example
docs/: 00-visao-geral.md  README.md  agentes-ia.md  apis-openapi.md  arquitetura-backend.md  arquitetura-banco-dados.md  arquitetura-corporativa.md  arquitetura-event-driven.md  arquitetura-frontend.md  chatwoot-whatsapp-setup.md  deploy-proximo-passo.md  deploy-sync-sem-rsync.md  devops.md  e2e-atendimento-crm.md  e2e-chatwoot-crm.md  fluxos-comerciais-atendimento.md  guia-claude-code.md  guia-cursor.md  integracao-chatwoot.md  integracao-n8n.md  manual-implantacao-producao.md  multi-tenant.md  observabilidade.md  ports.md  regras-negocio-crm.md  roadmap.md  runbook-saas.md  seguranca-lgpd.md  webhook-signing.md
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts  (+1 more)
(+331 files in other folders)
